--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 html,
 body {
   height: 100%;
-  background-color: whitesmoke;
+  background-color: white;
 }
 
 .container {
@@ -32,23 +32,421 @@ header .logo img {
   width: 236px;
 }
 
-header nav {
+nav.menu-desktop {
   float: right;
 }
 
-header ul {
+nav.menu-desktop ul {
   padding: 8px 0;
   list-style-type: none;
 }
 
-header ul li {
+nav.menu-desktop ul li {
   float: left;
   padding: 0 20px;
   font-size: 15px;
   text-transform: uppercase;
 }
 
-header ul li a {
+nav.menu-desktop ul li a {
   color: #b4b4b4;
   text-decoration: none;
+}
+
+nav.menu-mobile {
+  width: 25px;
+  height: 25px;
+  float: right;
+  display: none;
+  cursor: pointer;
+  margin-top: 7px;
+  background-size: 100% 100%;
+  background-image: url("../img/menu-mobile.png");
+}
+
+nav.menu-mobile ul {
+  left: 0;
+  top: 60px;
+  width: 100%;
+  z-index: 99;
+  display: none;
+  text-align: center;
+  position: absolute;
+  list-style-type: none;
+  background-color: white;
+}
+
+nav.menu-mobile ul li {
+  font-size: 15px;
+  padding: 10px 0;
+  text-transform: uppercase;
+}
+
+nav.menu-mobile ul li a {
+  color: #b4b4b4;
+  text-decoration: none;
+}
+
+/** MOSAICO **/
+
+.mosaico-single {
+  float: left;
+  width: calc(100% / 6);
+}
+
+.img-mosaico {
+  width: 100%;
+  padding-top: 100%;
+  border: 5px solid white;
+  background-color: rebeccapurple;
+  /*background-image: url('');*/
+}
+
+section.services .container {
+  top: -35px;
+  display: flex;
+  max-width: 800px;
+  text-align: center;
+  position: relative;
+  align-items: center;
+}
+
+section.services .box-service:nth-of-type(1) {
+  width: 30%;
+  padding: 30px 2%;
+  background-color: #576975;
+}
+
+section.services .box-service:nth-of-type(2) {
+  width: 40%;
+  padding: 50px 2%;
+  background-image: none;
+  background-color: #688293;
+}
+
+section.services .box-service:nth-of-type(3) {
+  width: 30%;
+  padding: 30px 2%;
+  background-color: #576975;
+}
+
+section.services .box-service h2 {
+  color: white;
+  font-size: 15px;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+
+section.services .box-service p {
+  color: white;
+  font-size: 12px;
+  margin-top: 8px;
+  font-weight: normal;
+}
+
+section.services .box-service {
+  background-size: 18px 18px;
+  background-repeat: no-repeat;
+  background-position: center calc(100% - 6px);
+  background-image: url("../img/icone_dente.png");
+}
+
+/** PERFIL **/
+
+section.perfil {
+  padding: 40px 0;
+}
+
+section.perfil .container {
+  max-width: 800px;
+}
+
+section.perfil .perfil-wraper-1 {
+  padding-top: 60%;
+  position: relative;
+}
+
+section.perfil .perfil-wraper-2 {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: absolute;
+  align-items: center;
+}
+
+section.perfil .img-perfil {
+  width: 40%;
+  height: 100%;
+  background-size: 100% 100%;
+  background-image: url(../img/img_perfil.png);
+}
+
+section.perfil .texto-perfil {
+  width: 60%;
+  padding: 0 30px;
+  text-align: justify;
+}
+
+section.perfil .texto-perfil h2 {
+  font-size: 18px;
+  color: #698293;
+}
+
+section.perfil .texto-perfil p {
+  font-size: 14px;
+  margin-top: 8px;
+  color: #4b4b4b;
+}
+
+/** VIDEOS **/
+
+section.videos {
+  padding: 50px 0;
+}
+
+section.videos .box-video {
+  float: left;
+  position: relative;
+  width: calc(100% / 3);
+  border: 5px solid white;
+  padding-top: calc(33.3% * 0.6);
+}
+
+section.videos iframe {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+section.tratamentos {
+  padding: 50px;
+}
+
+section.tratamentos .container {
+  padding: 50px 0;
+}
+
+section.tratamentos h2 {
+  color: #698293;
+  font-size: 20px;
+  text-align: center;
+}
+
+section.tratamentos .tratamento-wraper {
+  float: left;
+  width: calc(100% / 3);
+}
+
+.tratamento-single {
+  padding: 10px 20px;
+}
+
+section.tratamentos .tratamento-single h2 {
+  font-size: 18px;
+  color: #737373;
+}
+
+.tratamento-single p {
+  font-size: 13px;
+  padding: 10px 0;
+  color: #b4b4b4;
+}
+
+/** DEPOIMENTOS **/
+
+section.depoimentos h2 {
+  color: #698293;
+  font-size: 20px;
+  text-align: center;
+}
+
+section.depoimentos .container {
+  padding: 30px 0;
+  max-width: 500px;
+}
+
+section.depoimentos .depoimento-single {
+  text-align: center;
+}
+
+.depoimento-single quote {
+  color: #b4b4b4;
+  font-size: 15px;
+}
+
+.depoimento-single .nome-depoimento {
+  padding: 20px 0;
+}
+
+.nome-depoimento img {
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
+}
+
+.nome-depoimento span {
+  top: 6px;
+  color: #b4b4b4;
+  font-size: 13px;
+  position: relative;
+  vertical-align: top;
+  display: inline-block;
+}
+
+/** SOCIAL **/
+
+.instagram-chamada {
+  float: left;
+  width: 100%;
+  padding: 40px 0 20px 0;
+  text-align: center;
+  background-color: #98a5ae;
+}
+
+.instagram-chamada p {
+  color: white;
+  font-size: 13px;
+  padding: 10px 0;
+  line-height: 23px;
+}
+
+.mosaico-social {
+  float: left;
+  width: 100%;
+}
+
+.img-mosaico-single-social {
+  float: left;
+  width: calc(100% / 9);
+  border: 6px solid white;
+  padding-top: calc(100% / 9);
+  background-color: rebeccapurple;
+}
+
+.facebook-chamada {
+  float: left;
+  width: 100%;
+  text-align: center;
+  padding: 40px 0 20px 0;
+  background-color: #576975;
+}
+
+.facebook-chamada p {
+  color: white;
+  font-size: 13px;
+  padding: 10px 0;
+  line-height: 23px;
+}
+
+/** RESPONSIVO **/
+
+@media screen and (max-width: 1024px) {
+  .img-mosaico-single-social {
+    float: left;
+    width: calc(100% / 6);
+    padding-top: calc(100% / 6);
+  }
+
+  .mosaico-social > div:nth-of-type(1n + 7) {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  nav.menu-desktop {
+    display: none;
+  }
+
+  nav.menu-mobile {
+    display: block;
+  }
+
+  section.services .container {
+    flex-direction: column;
+  }
+
+  section.services .box-service:nth-of-type(1) {
+    width: 80%;
+    max-width: 420px;
+    padding: 30px 2%;
+  }
+
+  section.services .box-service:nth-of-type(2) {
+    width: 90%;
+    max-width: 450px;
+    padding: 40px 2%;
+  }
+
+  section.services .box-service:nth-of-type(3) {
+    width: 80%;
+    max-width: 420px;
+    padding: 30px 2%;
+  }
+
+  section.perfil .perfil-wraper-1 {
+    padding-top: 0;
+  }
+
+  section.perfil .perfil-wraper-2 {
+    height: auto;
+    position: static;
+    text-align: center;
+    display: inline-block;
+  }
+
+  section.perfil .img-perfil {
+    width: 55%;
+    height: auto;
+    padding-top: 70%;
+    display: inline-block;
+  }
+
+  section.perfil .texto-perfil {
+    width: 100%;
+    padding: 0 30px;
+    display: inline-block;
+  }
+
+  section.videos {
+    text-align: center;
+  }
+
+  section.videos .box-video {
+    width: 80%;
+    float: none;
+    display: inline-block;
+    padding-top: calc(80% * 0.6);
+  }
+
+  .img-mosaico-single-social {
+    float: left;
+    width: calc(100% / 3);
+    padding-top: calc(100% / 3);
+  }
+
+  .mosaico-social > div:nth-of-type(1n + 4) {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  section.perfil .img-perfil {
+    width: 80%;
+    padding-top: 110%;
+  }
+
+  section.videos .box-video {
+    width: 100%;
+    padding-top: calc(100% * 0.6);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header .logo img {
+    width: 170px;
+  }
 }
