--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,101 @@ section.depoimentos .depoimento-single {
   line-height: 23px;
 }
 
+/** CONTATO **/
+
+section.contato {
+  padding: 60px 2%;
+}
+
+section.contato h2 {
+  font-size: 18px;
+  color: #698293;
+  text-align: center;
+}
+
+section.contato form {
+  width: 100%;
+  margin: 30px auto;
+  max-width: 500px;
+}
+
+.form-wraper {
+  float: left;
+  padding: 0 10px;
+  margin-top: 10px;
+}
+
+.w100 {
+  width: 100%;
+}
+
+.w50 {
+  width: 50%;
+}
+
+.form-wraper span {
+  color: #b4b4b4;
+  font-size: 15px;
+}
+
+.form-wraper input[type="text"],
+input[type="email"] {
+  width: 100%;
+  height: 35px;
+  margin-top: 8px;
+  line-height: 35px;
+  padding-left: 9px;
+  border: 1px solid #dadada;
+}
+
+.form-wraper textarea {
+  width: 100%;
+  resize: none;
+  padding: 8px;
+  height: 121px;
+  margin-top: 8px;
+  border: 1px solid #dadada;
+}
+
+.form-wraper input[type="submit"] {
+  border: 0;
+  width: 100px;
+  height: 35px;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  background-color: #688293;
+}
+
+/** FOOTER **/
+
+footer {
+  padding: 40px 2%;
+  text-align: center;
+  background-color: #688293;
+}
+
+footer .container {
+  max-width: 1150px;
+}
+
+footer .footer-block {
+  float: left;
+  width: calc(100% / 3);
+}
+
+.footer-block h2 {
+  color: white;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer-block p {
+  color: white;
+  font-size: 14px;
+  margin-top: 8px;
+}
+
 /** RESPONSIVO **/
 
 @media screen and (max-width: 1024px) {
@@ -431,6 +526,19 @@ section.depoimentos .depoimento-single {
   .mosaico-social > div:nth-of-type(1n + 4) {
     display: none;
   }
+
+  footer {
+    text-align: center;
+  }
+
+  footer .footer-block {
+    float: none;
+    width: 100%;
+  }
+
+  footer .footer-block:nth-of-type(2) {
+    margin: 30px 0;
+  }
 }
 
 @media screen and (max-width: 580px) {
@@ -442,6 +550,10 @@ section.depoimentos .depoimento-single {
   section.videos .box-video {
     width: 100%;
     padding-top: calc(100% * 0.6);
+  }
+
+  .w50 {
+    width: 100%;
   }
 }
 
